<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_harkor_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="harkor.rainbowbrain.HarkorGame"
    android:background="@color/tlo_gray">

    <Button
        android:text="@string/sRED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tTytul"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/button2"
        android:background="@android:color/holo_green_light"
        android:onClick="baton1"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tTytul"
        android:textSize="24sp"
        android:textColor="@color/harkorcolour"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:text="@string/HasloGry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tscore"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_above="@+id/progresjest"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="@string/licznik" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progresjest"
        android:progress="4"
        android:progressTint="@android:color/white"
        android:max="5"
        android:indeterminate="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/dalej"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dalej"
        android:visibility="invisible"
        android:layout_alignTop="@+id/tscore"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="dalejdalej" />

    <TextView
        android:text="@string/podsumowanie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvWynik"
        android:textAlignment="center"
        android:visibility="invisible"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:text="PKT"
        android:textSize="30sp"
        android:textColor="@color/harkorcolour" />

    <Button
        android:text="@string/sGREEN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:background="@android:color/holo_red_dark"
        android:onClick="baton2"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <Button
        android:text="@string/sBLUE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="20dp"
        android:onClick="baton3"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/button5"
        android:background="@android:color/holo_blue_light"
        android:text="@string/sYELLOW"
        android:onClick="baton4"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
